<?xml version="1.0" encoding="utf-8"?>

        <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@color/white">

    <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/container_padding"
            android:layout_margin="@dimen/container_margin"
            android:id="@+id/description_fragment_holder"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/description_working_hrs_container"
                android:layout_weight="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text_color"
                    android:text="@string/working_hrs"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text_color"
                    android:id="@+id/description_working_hrs"/>
                </LinearLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_divider"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/description_groups_container"
                android:layout_weight="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text_color"
                    android:text="@string/groups_text"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text_color"
                    android:id="@+id/description_groups"/>
        </LinearLayout>
            </LinearLayout>
    <FrameLayout
            android:padding="@dimen/container_padding"
            android:layout_margin="@dimen/container_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptions_gallery_holder"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/container_margin"
            android:padding="@dimen/container_padding"
            android:onClick="openCommentsSection">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/comments_btn_text_size"
                android:text="@string/comments_text"
                android:layout_gravity="center_vertical"
                />
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/arrow_right"
                android:layout_gravity="center_vertical|right"/>
            </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/container_margin"
            android:padding="@dimen/container_padding">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/comments_btn_text_size"
                android:text="@string/rate_text"
                android:layout_gravity="center_vertical"
                />
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/object_rating_bar"
               />
            </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/container_margin"
            android:padding="@dimen/container_padding"
            android:onClick="goToMapView">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/comments_btn_text_size"
                android:text="@string/view_map"
                android:layout_gravity="center_vertical"
                />
        <ImageView
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/google_pin"
                />
    </LinearLayout>

</LinearLayout>
    </ScrollView>